--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,14 @@
 {
-	"name": "Secrets",
+	"name": "KiC",
 	"dockerFile": "Dockerfile",
-	"remoteUser": "vscode",
-	"overrideCommand": false,
+
+	// do not change these if you want Docker in Docker support
+	"runArgs": ["--init", "--privileged"],
 	"mounts": [ "source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind" ],
-	"runArgs": [ "--init", "--privileged" ],
+	"overrideCommand": false,
+
+	// some base images require a specific user name
+	"remoteUser": "vscode",
 
 	"customizations": {
 		"vscode": {
@@ -32,26 +36,30 @@
 		}
 	},
 
+	"hostRequirements": {
+		"cpus": 4
+	},
+
 	// forward ports for the app
-	"forwardPorts": [ 8080 ],
+	"forwardPorts": [
+		8080,
+		30080
+	],
 
 	// add labels
 	"portsAttributes": {
-		"8080": { "label": "Secrets" }
-	},
-
-	"hostRequirements": {
-		"cpus": 4
+		"8080": { "label": "Local" },
+		"30080": { "label": "K8s" }
 	},
 
 	"waitFor": "postCreateCommand",
 
 	// Use 'onCreateCommand' to run commands as part of container creation.
-	"onCreateCommand": "/bin/bash -c .devcontainer/on-create.sh",
+	"onCreateCommand": "/bin/zsh -c .devcontainer/on-create.sh",
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "/bin/bash -c .devcontainer/post-create.sh",
+	"postCreateCommand": "/bin/zsh -c .devcontainer/post-create.sh",
 
 	// Use 'postStartCommand' to run commands after the container starts.
-	"postStartCommand": "/bin/bash -c .devcontainer/post-start.sh"
+	"postStartCommand": "/bin/zsh -c .devcontainer/post-start.sh"
 }
