--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -13,7 +13,7 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
-      nodePort: 31080
+      nodePort: 30080
 
 ---
 
@@ -41,16 +41,10 @@ spec:
       httpGet:
         path: /healthz
         port: http
-      initialDelaySeconds: 5
-      failureThreshold: 10
-      periodSeconds: 60
-    startupProbe:
-      httpGet:
-        path: /readyz
-        port: http
-      initialDelaySeconds: 5
-      failureThreshold: 60
-      periodSeconds: 2
+      initialDelaySeconds: 2
+      failureThreshold: 5
+      periodSeconds: 10
+
     resources:
       limits:
         memory: 128Mi
@@ -58,3 +52,13 @@ spec:
       requests:
         memory: 64Mi
         cpu: 100m
+
+    volumeMounts:
+      - name: secretsvol
+        mountPath: "/secretsvol"
+        readOnly: true
+
+  volumes:
+    - name: secretsvol
+      secret:
+        secretName: sample
