updated from dev branch

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,11 +5,18 @@ FROM ghcr.io/cse-labs/k3d:latest
 
 # some images require specific values
 ARG USERNAME=vscode
-#ENV PATH=$PATH:/home/vscode/bin:/opt/mssql-tools/bin
+ENV PATH=$PATH:/home/vscode/bin:/opt/mssql-tools/bin
 
 # update welcome message; chown home dir
 RUN echo "$(date +'%Y-%m-%d %H:%M:%S')    docker build start" >> "/home/${USERNAME}/status" && \
+    mkdir -p "/home/${USERNAME}/bin" && \
+    mkdir -p "/home/${USERNAME}/.ssh" && \
+    mkdir -p "/home/${USERNAME}/go/bin" && \
+    mkdir -p "/home/${USERNAME}/.oh-my-zsh/completions" && \
     mkdir -p "/home/${USERNAME}/.config/vscode-dev-containers" && \
+    echo "export GOPATH=/home/${USERNAME}/go" >> /etc/zsh/zshrc && \
+    wget -q -O - https://raw.githubusercontent.com/rancher/k3d/main/install.sh | TAG=v5.4.6 bash && \
+    apt-get update && \
     mkdir -p /usr/local/etc/vscode-dev-containers && \
     echo "👋 Welcome to Codespaces!" > /usr/local/etc/vscode-dev-containers/first-run-notice.txt && \
     echo "" >> /usr/local/etc/vscode-dev-containers/first-run-notice.txt && \
